# PikaPython

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  PikaTech.PikaScript.pdsc  Q  README.md  README_zh.md  SConscript  api-make-linux.sh  api-make-win10.sh  api-make.sh  clean.sh  commit.sh  gen_pack.sh  index.md  init.sh  lcov.sh  logo.txt  make.sh  packages.toml  packtool-test.cpp  pull.sh  push.sh  test  test-banchmark  update-compiler.sh  宋明绅-20191016-网络编程实验课.txt  王薪陶-20190828-网络编程实验.txt
bsp/ch582/: CMakeLists.txt  README.md  build.bat  build.sh
bsp/ch582/APP/: Main.c
bsp/ch582/BLE_LIB/: CH58xBLE_LIB.h
bsp/ch582/HAL/: KEY.c  LED.c  MCU.c  RTC.c  SLEEP.c
bsp/ch582/Ld/: Link.ld
bsp/ch582/RVMSIS/: core_riscv.c  core_riscv.h
bsp/ch582/Startup/: startup_CH583.S
bsp/ch582/StdPeriphDriver/: CH58x_adc.c  CH58x_clk.c  CH58x_flash.c  CH58x_gpio.c  CH58x_i2c.c  CH58x_pwm.c  CH58x_pwr.c  CH58x_spi0.c  CH58x_spi1.c  CH58x_sys.c  CH58x_timer0.c  CH58x_timer1.c  CH58x_timer2.c  CH58x_timer3.c  CH58x_uart0.c  CH58x_uart1.c  CH58x_uart2.c  CH58x_uart3.c  CH58x_usb2dev.c  CH58x_usb2hostBase.c  CH58x_usb2hostClass.c  CH58x_usbdev.c  CH58x_usbhostBase.c  CH58x_usbhostClass.c
bsp/ch582/USB_LIB/: CH583UFI.c  CHRV3UFI.h  CHRV3UFI.lib
bsp/ch582/pikascript/: main.py  requestment.txt
coreDevelopment/: CMakeLists.txt  api-make-linux.sh  init.sh  test-banchmark.sh  test.sh  update-compiler.sh
coreDevelopment/boot/banchmark/: CMakeLists.txt
coreDevelopment/boot/demo04-usarts/: CMakeLists.txt
coreDevelopment/package/pikascript/: CMakeLists.txt
coreDevelopment/test/: arg-test.cpp  args-test.cpp  sysObj-test.cpp
port/linux/: .clang-format  .test.py  CMakeLists.txt  _gtest_once.sh  api-make-linux.sh  api-make-win10.sh  api-make.sh  app.pika  auto_release.py  ci_benchmark.sh  ci_benchmark_calibration.py  ci_benchmark_run.sh  ci_benchmark_select.py  ci_benchmark_times.sh  fast_test.sh  fib_test.sh  format.py  generate_stack_usage_report.py  gtest.sh  init.sh  install_dependency.sh  lab-pull.sh  lab-push.sh  lab.sh  lcov.sh  linux.code-workspace  main.py  make.sh  nano_lcov.sh  only_make.sh  pkg-pull.sh  pkg-push.sh  prof.sh  pull-core.sh  push-core.sh  release_auto.py  release_check.py  release_diff.py  release_helper.py  run.sh  (+11 more)
port/linux/benchmark/: CMakeLists.txt  main.cpp  pika_config.h  py.cpp
port/linux/config/: pika_config_builtin_list.h  pika_config_default.h  pika_config_float.h  pika_config_optimize_speed.h  pika_config_pool.h  pika_config_syntax_level_maximal.h  pika_config_syntax_level_minimal.h
port/linux/performance/: CMakeLists.txt  main.c
port/linux/test/: CMakeLists.txt  PikaCV-test.cpp  PikaMath-test.cpp  PikaNN-test.cpp  VM-test.cpp  arg-test.cpp  args-test.cpp  benchmark-lifecycle-test.cpp  builtin-test.cpp  cJSON-test.cpp  chinese-test.cpp  class-test.cpp  cmodule-test.cpp  compile-test.cpp  configparser-test.cpp  content-test.cpp  ctypes-test.cpp  event-test.cpp  except-test.cpp  gc-test.cpp  hal-test.cpp  json-test.cpp  main.cpp  mem_pool_config.c  mem_pool_config.h  mem_test.cpp  module-test.cpp  mqtt-test.cpp  network-test.cpp  object-test.cpp  os-test.cpp  packtool-test.cpp  parse-test.cpp  pikaMain-test.cpp  pika_config_gtest.c  pika_config_gtest.h  pikaui-test.cpp  pool-test.cpp  py-test.cpp  queue-test.cpp  (+9 more)
src/boot/demo03-usart/: CMakeLists.txt  main.c
test/: CMakeLists.txt  PikaCV-test.cpp  PikaMath-test.cpp  PikaNN-test.cpp  VM-test.cpp  arg-test.cpp  args-test.cpp  builtin-test.cpp  cJSON-test.cpp  chinese-test.cpp  class-test.cpp  closure-test.cpp  cmodule-test.cpp  compile-test.cpp  configparser-test.cpp  content-test.cpp  ctypes-test.cpp  doc-test.cpp  event-test.cpp  except-test.cpp  gc-test.cpp  hal-test.cpp  hashlib-test.cpp  json-test.cpp  lua-test.cpp  main.cpp  mem_test.cpp  module-test.cpp  mqtt-test.cpp  network-test.cpp  object-test.cpp  os-test.cpp  packtool-test.cpp  parse-test.cpp  pikaMain-test.cpp  pika_config_gtest.c  pika_config_gtest.h  pikaui-test.cpp  pool-test.cpp  py-test.cpp  (+12 more)
test/assets/: widget_config.ini
test/python/: UnitTest.py  main.py  str_issue1.py  test_module3.py
test/python/PikaCV/: PikaCV_test11.py
test/python/PikaUI/: PikaUI.py  PikaUI_backend_text.py  PikaUI_core.py  test_page.py  textgui.py
test/python/_thread/: test2.py  thread_self.py
test/python/aes/: test_aes.py
test/python/builtin/: fn_default_tuple.py  fn_fn.py  int_extern.py  isinstance.py  slice.py
test/python/builtins/: is_not.py  type.py
test/python/callback/: test3.py
test/python/datastruct/: circlequeue.py
test/python/event/: event_thread.py
test/python/eventloop/: delay1.py  once2.py  test1.py
test/python/except/: except_isinstance.py  try_while_return.py  while_try_while.py
test/python/gc/: gc_circle.py  gc_tree1.py
test/python/iotcloud/: test_basic_aliyun.py  test_basic_tencent.py  test_basic_tencent_iot_hub.py
test/python/issue/: common_issue_1b23f4c1bf.py  issue_big_dict.py  issue_big_dict_update.py  issue_dict_update.py  issue_global.py  issue_keyword_mem_leak.py
test/python/json/: json_dumps.py  json_loads.py  json_speed.py
test/python/modbus/: rtu_master.py
test/python/mqtt/: mqtt_connect.py  mqtt_init.py  mqtt_publish.py  mqtt_set_para.py  mqtt_subscribe.py
test/python/os/: os_path.py
test/python/proxy/: proxy1.py  proxy2.py
test/python/re/: match.py
test/python/requests/: get_basic.py  requests_encode.py
test/python/socket/: server_client.py  socket_json.py
test/python/zlib/: zlib_err.py
tools/pikaByteCodeGen/: CMakeLists.txt  CrossCompile.cmake  README.md  cross-win.sh  main.c  pikaAsm.txt  pikaByteCode.txt  pika_config.h
tools/pikaByteCodeGen/cross-win/: CMakeLists.txt
tools/pikaCompiler/: .gitignore  Arm2D.py  Cargo.toml  PikaDebug.py  PikaDebug.pyi  PikaObj.pyi  PikaStdData.py  PikaStdData.pyi  PikaStdDevice.py  PikaStdLib.py  PikaStdLib.pyi  PikaStdTask.py  PikaStdTask.pyi  PyInfo.py  PyInfo.pyi  README.md  application.py  application.pyi  build.sh  cross-build.sh  main.py  module.py  requestment.txt  test.py
(+8089 files in other folders)
