cmake_minimum_required(VERSION 3.0.0)
add_compile_options(-Wall -Wextra -Wno-unused-parameter -Wno-sign-conversion -Wno-write-strings)
OPTION(PIKA_CONFIG_ENABLE "pika config enable" OFF)
IF(PIKA_CONFIG_ENABLE)
    ADD_DEFINITIONS(-DPIKA_CONFIG_ENABLE)
ENDIF(PIKA_CONFIG_ENABLE)

project(pikascript VERSION 0.1.0)

SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fprofile-arcs -ftest-coverage")
SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -fprofile-arcs -ftest-coverage")
SET(CMAKE_EXE_LINKER_FLAGS_DEBUG "${CMAKE_EXE_LINKER_FLAGS_DEBUG} -fprofile-arcs -ftest-coverage -lgcov")

include_directories(package/pikascript/pikascript-core)
include_directories(package/pikascript/pikascript-api)
include_directories(package/pikascript/pikascript-lib/PikaRunExternControl)
include_directories(package/pikascript/pikascript-lib/PikaRunExternControl)
include_directories(test)
INCLUDE_DIRECTORIES(/usr/include/lua5.3)
include_directories(config)
# include_directories(boot/demo01-led)
add_subdirectory(package/googletest)
add_subdirectory(package/pikascript)
add_subdirectory(test)
# add_subdirectory(boot/demo01-led)
# add_subdirectory(boot/demo02-add)
# add_subdirectory(boot/demo03-usart)
# add_subdirectory(boot/demo04-usarts)
# add_subdirectory(boot/demo05-sysobject)
add_subdirectory(boot/demo06-pikamain)
add_subdirectory(boot/banchmark)
add_subdirectory(benchmark)

