[package]
name = "rust-msc"
version = "0.1.0"
edition = "2018"

[lib]
name = "pikabinder"
crate-type = ["staticlib"]
path = "src/lib.rs"

[dependencies]
libc = "0.2"
fs_extra = "1.3.0"

[profile.release]
opt-level = 'z'
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
